--- a/server/client/market-client/src/components/Avail.css
+++ b/server/client/market-client/src/components/Avail.css
@@ -9,20 +9,55 @@
     flex-direction: row;
     border-radius: 10px;
     width: 100%;
-    border: 1px solid black;
     overflow: auto;
 }
 .market-items {
     text-align: center;
-    width: 100%;
-    padding: 10px;
-    margin: 10px;
+    min-width: 350px;
+    height: 350px;
     border-radius: 10px;
-    border: 1px solid black;
+    margin: 20px;
+    box-shadow: 0px 6px 8px rgba(16, 51, 107, 0.25);
+    background: white;
 }
 
 .market-items > ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
+}
+
+.market-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px 10px 0 0;
+
+}
+
+.market-img-wrap {
+    position: relative;
+    width: 100%;
+    padding-top: 67%;
+    overflow: hidden;
+    
+}
+
+.item-name {
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    width: 110%;
+    text-align: left;
+    padding-left: 10px;
+    text-shadow: 1px 2px 5px black;
+    box-shadow: -10px -30px 20px rgba(1,1,28,0.5) inset;
+}
+
+.item-name > h1 {
+    color: white;
 }
