--- a/server/client/market-client/src/components/UserSign.css
+++ b/server/client/market-client/src/components/UserSign.css
@@ -1,16 +1,14 @@
-.container {
-
-}
 
 .wrapper {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
 }
 
 .sign {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
     margin-left: 10px;
     margin-right: 10px;
 }
