--- a/server/client/market-client/src/components/Avail.css
+++ b/server/client/market-client/src/components/Avail.css
@@ -36,8 +36,18 @@
     width: 100%;
     height: 100%;
     border-radius: 10px 10px 0 0;
-
+    transition: all 0.2s linear;
 }
+
+.market-img:hover {
+    transform: scale(1.05);
+}
+
+.fade-img {
+    animation-name: fade-img;
+    animation-duration: 2s;
+  }
+  
 
 .market-img-wrap {
     position: relative;
